--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,17 +20,13 @@ spring:
       testOnBorrow: false
       testOnReturn: false
       poolPreparedStatements: true
-      #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-      filters: stat,wall,log4j
-      maxPoolPreparedStatementPerConnectionSize: 20
-      useGlobalDataSourceStat: true
-      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
   profiles:
     active: B,A
 #指定打印某个类的日志
 logging:
   level:
-    com.example.demo.mapper.SysUserMapper: DEBUG
+    com.example.demo.mapper.SysUserMapper: debug
+    com.example.demo.mapper.SysPermissionMapper: debug
 
 ---
 # mybatis
@@ -44,7 +40,6 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: true
-    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
   mapper-locations:
     # 此处是正常业务的mapper路径
     - classpath:mapper/*.xml
