--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+ 
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,6 +61,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!--tools end-->
     </dependencies>
 
