Left join 结果集嵌套

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
       testOnReturn: false
       poolPreparedStatements: true
   profiles:
-    active: B,A
+    active: B
 
 ---
 # mybatis
