使用： java -jar -Dspring.config.location=[绝对或相对位置] [包名]

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,57 +1,5 @@
-spring:
-  datasource:
-    #   数据源基本配置
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.4.35:3306/bxd_user?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      name: druid
-      #   数据源其他配置
-      initialSize: 5
-      minIdle: 5
-      maxActive: 20
-      maxWait: 60000
-      timeBetweenEvictionRunsMillis: 60000
-      minEvictableIdleTimeMillis: 300000
-      validationQuery: SELECT 1 FROM DUAL
-      testWhileIdle: true
-      testOnBorrow: false
-      testOnReturn: false
-      poolPreparedStatements: true
-  profiles:
-    active: B,A
-##指定打印某个类的日志
-#logging:
-#  level:
-#    com.example.demo.mapper.SysUserMapper: debug
-#    com.example.demo.mapper.SysPermissionMapper: debug
+server:
+  port: 8080
 
----
-# mybatis
-server:
-  port: 9090
-spring:
-  config:
-    activate:
-      on-profile: A
-mybatis:
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: true
-  mapper-locations:
-    # 此处是正常业务的mapper路径
-    - classpath:mapper/*.xml
-    # 如果基于数据库实现分布式唯一键，将这里放开
-    # 这是UidGenerator的mapper路径
-    # - classpath:/mybatis/mapper/*.xml
-  type-aliases-package: com.example.demo.model
----
-# spring data jpa
-server:
-  port: 9090
-spring:
-  config:
-    activate:
-      on-profile: B
+
+env: 11
